@@ -1,6 +1,28 @@
-Here I will extend a classic ATARI asteroid shooter game by enabling a space ship to make decisions by itself through a neural network. The neural network will be taking the observations of asteroid positions and the ship's velocity and then will be proposing possible actions. I will train the network with gradient-free Evolutionary Strategy apporach and track the performance improvement in the API as well.
+# Intelligent Asteroid Shooter
 
-The plan is to have a desktop application that will be implemented in JavaFX. To this end, I will follow MOOC Ex 14.9 as a starting template for this API:<br />
-https://java-programming.mooc.fi/part-14/3-larger-application-asteroids
+Classic ATARI-like asteroid shooter game with an AI twist -- in additional to Single Player mode, you can train your very own neural network that will take control of the ship. 
 
-Wish me luck boys.
+## Installation
+
+This is a Java desktop application that was written with JavaFX. Therefore, to install and run the application you will need to have [Maven](https://maven.apache.org/download.cgi), latest Java Development Kit [JDK 23](https://www.oracle.com/java/technologies/downloads/#jdk23-linux), and latest [JavaFX](https://gluonhq.com/products/javafx/) on your machine. Assuming you have all three (and added all to your PATH as well), use the following command to generate .jar file that is needed for app execution:
+```
+mvn install
+```
+and then this command to launch the app
+```
+java --add-modules javafx.controls,javafx.fxml --module-path .\dependency-jars\ -jar .\Intelligent-Asteroids-Shooter-1.0-SNAPSHOT.jar
+```
+
+## Single Player
+
+The single player mode was inspired by the exercise that comes from [MOOC Java Programming II course](https://java-programming.mooc.fi/part-14/3-larger-application-asteroids). After selecting your ship and game difficulty level, try shooting as much asteroids as you can and immortalize your name in the table of records. The later was implemented with use of H2 Database. 
+
+![](https://github.com/RusFortunat/Intelligent-Asteroids-Shooter/blob/main/docs/player%20view.gif)
+
+
+## Train AI with Evolutionary Algorithm
+
+The neural network will be taking the observations of asteroid positions and the ship's velocity and then will be proposing possible actions. I will train the network with gradient-free Evolutionary Strategy apporach and track the performance improvement in the API as well.
+
+![](https://github.com/RusFortunat/Intelligent-Asteroids-Shooter/blob/main/docs/training%20view.gif)
+
